--- a/koko_manufacturing/koko_calibrate/config/link_control_parameters.yaml
+++ b/koko_manufacturing/koko_calibrate/config/link_control_parameters.yaml
@@ -1,31 +1,36 @@
 koko_controllers:
+
+  ### Controller for publishing to the joint_states topic
+
   joint_state_controller:
     type: joint_state_controller/JointStateController
-    publish_rate: 500
-  # Position Controllers ---------------------------------------
-  joint_positions_controller:
-    # TODO: resolve redundant constraint
-    paired_constraints: [0, 1]
-    endlink: 'roll_link'
-    filter_length: 20
-    type: koko_controllers/InverseDynamicsController
-    root_name: koko
-    zero_g_mode: false
+    publish_rate: 125
+
+  ### Gripper controller
+
+  gripper_controller:
+    type: "gripper_action_controller/GripperActionController"
+    joints: gripper_joint
+    goal_tolerance: 0.01
+    stalled_velocity_threshold: 0.01
+    stall_timeout: 0.2
+    gains:
+      gripper_joint: {p: 20, i: 5, d: 1, i_clamp: 1}
+
+  ### Joint controllers
+
+  torque_controller:
+    type: effort_controllers/JointGroupEffortController
+    joints:
+      - lift_joint
+      - roll_joint
+
+  joint_position_controller:
+    type: effort_controllers/JointGroupPositionController
+    joints:
+      - lift_joint
+      - roll_joint
     lift_joint:
-      #p: 100
-      p: 5.0
-      d: 2.0
-      id: 0.0
-      max_torque: 30
-      min_torque: -30
-      max_angle: 8.5
-      min_angle: -8.5
+      pid: {p: 25, i: 0, d: 4, i_clamp: 0}
     roll_joint:
-      #p: 100
-      p: 5.0
-      d: 2.0
-      id: 0.0
-      max_torque: 30
-      min_torque: -30
-      max_angle: 8.6
-      min_angle: -8.6
+      pid: {p: 15, i: 0, d: 3, i_clamp: 0}
