--- a/koko_manufacturing/koko_calibrate/config/base_parameters.yaml
+++ b/koko_manufacturing/koko_calibrate/config/base_parameters.yaml
@@ -1,15 +1,14 @@
 koko_hardware:
     joint_names: ['base_roll_joint']
     motor_names: ['base_roll_motor']
-    motor_ids: [10]
+    motor_ids: [15]
     gear_ratios: [7.1875] # 8.24448529412 results from 7.1875 * (39 / 34) from the output gear
     current_to_torque_ratios: [0.626] # 1.0 is decent approx for small motors
     current_offset: [0.0]
     calibration_initial_angles: [0.0]
     hardstop_start_angles: [0.0] # angles that you the robot is in for hardstop calibration
-    directions:        [1.0]
-    torque_directions: [1.0]
     joint_torque_directions: [1.0]
+    id_torque_gains: [0.0]
     softstop_min_angles: [-8.2]
     softstop_max_angles: [8.2]
     calibration_encoder: [3.5856800916826863] # deprecated
