--- a/koko_misc/package.xml
+++ b/koko_misc/package.xml
@@ -47,6 +47,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>koko_hardware_drivers</build_depend>
   <run_depend>interactive_markers</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -54,6 +55,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>koko_hardware_drivers</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
