--- a/koko_manufacturing/koko_calibrate/config/base_parameters.yaml
+++ b/koko_manufacturing/koko_calibrate/config/base_parameters.yaml
@@ -17,4 +17,5 @@ koko_hardware:
     target_mode: "vive"
     softstop_torque_limit: 0.0
     softstop_tolerance: 0.0
+    accelerometer_calibration: false
     endlink: "shoulder_link"
