--- a/koko_vive/package.xml
+++ b/koko_vive/package.xml
@@ -45,13 +45,17 @@
   <build_depend>kdl_parser</build_depend>
   <build_depend>orocos_kdl</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>actionlib</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>rospy</run_depend>
   <run_depend>interactive_markers</run_depend>
   <run_depend>kdl_parser</run_depend>
+  <run_depend>actionlib</run_depend>
   <run_depend>orocos_kdl</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
