--- a/blue_kinematics/package.xml
+++ b/blue_kinematics/package.xml
@@ -17,8 +17,9 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>blue_controllers</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>urdf</build_depend>
   <build_depend>std_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
