--- a/blue_benchmarking/CMakeLists.txt
+++ b/blue_benchmarking/CMakeLists.txt
@@ -12,8 +12,9 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf2
   kdl_parser
-  interactive_markers tf visualization_msgs
-  blue_controllers
+  interactive_markers
+  tf
+  visualization_msgs
 )
 find_package(orocos_kdl)
 
