--- a/blue_benchmarking/package.xml
+++ b/blue_benchmarking/package.xml
@@ -18,12 +18,14 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>rosbag</build_depend>
   <build_depend>urdf</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>std_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>rosbag</run_depend>
   <run_depend>urdf</run_depend>
   <run_depend>tf2</run_depend>
   <run_depend>std_msgs</run_depend>
