--- a/blue_manufacturing/blue_calibrate/config/link_parameters.yaml
+++ b/blue_manufacturing/blue_calibrate/config/link_parameters.yaml
@@ -1,7 +1,7 @@
 blue_hardware:
     joint_names: ['lift_joint', 'roll_joint']
     motor_names: ['right_motor', 'left_motor']
-    motor_ids: [17, 10]
+    motor_ids: [31, 32]
     gear_ratios: [7.1875, 8.24448529412] # 8.24448529412 results from 7.1875 * (39 / 34) from the output gear
     current_to_torque_ratios: [0.626, 0.626] #[1.0, 1.0] # [0.626, 0.626]1.0 is decent approx for small motors
     current_offset: [0.0, 0.0]
@@ -13,9 +13,11 @@ blue_hardware:
     softstop_min_angles: [-8.2, -8.2]
     softstop_max_angles: [8.2, 8.2]
     differential_pairs: [0, 1]
+    baselink: "base_link"
     #vive or rviz
     target_mode: "vive"
     softstop_torque_limit: 0.0
     softstop_tolerance: 0.0
     accelerometer_calibration: false
     endlink: "roll_link"
+    serial_port: "/dev/ttyUSB1"
