--- a/blue_benchmarking/package.xml
+++ b/blue_benchmarking/package.xml
@@ -22,6 +22,7 @@
   <build_depend>urdf</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>blue_msgs</build_depend>
   <build_depend>blue_controllers</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
@@ -30,6 +31,7 @@
   <run_depend>urdf</run_depend>
   <run_depend>tf2</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>blue_msgs</run_depend>
   <run_depend>blue_controllers</run_depend>
 
 
