--- a/blue_manufacturing/blue_calibrate/config/base_parameters.yaml
+++ b/blue_manufacturing/blue_calibrate/config/base_parameters.yaml
@@ -1,7 +1,7 @@
 blue_hardware:
     joint_names: ['base_roll_joint']
     motor_names: ['base_roll_motor']
-    motor_ids: [1]
+    motor_ids: [82]
     gear_ratios: [7.1875] # 8.24448529412 results from 7.1875 * (39 / 34) from the output gear
     current_to_torque_ratios: [0.626] # 1.0 is decent approx for small motors
     current_offset: [0.0]
@@ -18,4 +18,10 @@ blue_hardware:
     softstop_torque_limit: 0.0
     softstop_tolerance: 0.0
     accelerometer_calibration: false
+    baselink: "base_link"
     endlink: "shoulder_link"
+    serial_port: "/dev/ttyUSB0"
+
+    accel_links:
+        - right_base_link
+        - right_shoulder_roll_link
