--- a/blue_teleop/package.xml
+++ b/blue_teleop/package.xml
@@ -23,10 +23,12 @@
   <build_depend>tf2</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>blue_controllers</build_depend>
+  <build_depend>trac_ik_python</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>urdf</run_depend>
+  <run_depend>trac_ik_python</run_depend>
   <run_depend>tf2</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>blue_controllers</run_depend>
