running! but need to debug

--- a/blue_dbrt/config/camera.yaml
+++ b/blue_dbrt/config/camera.yaml
@@ -1,10 +1,10 @@
 # depth_image_topic: /XTION/depth/image
 # camera_info_topic: /XTION/depth/camera_info
-depth_image_topic: /XTION/depth/image
-camera_info_topic: /XTION/depth/camera_info
+depth_image_topic: /camera/depth/image
+camera_info_topic: /camera/depth/camera_info
 
 resolution:
   width: 640
   height: 480
 
-downsampling_factor: 8 
+downsampling_factor: 8
