--- a/blue_dexnet/package.xml
+++ b/blue_dexnet/package.xml
@@ -20,11 +20,14 @@
   <build_depend>tf2</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>blue_controllers</build_depend>
+  <build_depend>kdl_parser_py</build_depend>
   <build_depend>trac_ik_python</build_depend>
+
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>urdf</run_depend>
+  <run_depend>kdl_parser_py</run_depend>
   <run_depend>trac_ik_python</run_depend>
   <run_depend>tf2</run_depend>
   <run_depend>std_msgs</run_depend>
